// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown  test placement 1`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-down leke-slide-open"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;

exports[`Dropdown  test placement 2`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-up"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;

exports[`Dropdown  test placement 3`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-down"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;

exports[`Dropdown  test placement 4`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-down"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;

exports[`Dropdown  test placement 5`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-up"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;

exports[`Dropdown  test placement 6`] = `
<div
  style="position: absolute; top: 0px; left: 0px; width: 100%;"
>
  <div
    class="leke-dropdown leke-dropdown-direction-up"
    style="min-width: 0; top: 0px; left: 0px;"
  >
    <div>
      popup
    </div>
  </div>
</div>
`;
